[package]
name = "weather-info"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
reqwest = { version = "0.10.7", features = ["native-tls-vendored", "blocking"] }
chrono = { version = "0.4.13", features = ["serde"] }
